[package]
name = "curator"
version = "0.1.0"
authors = ["Juraj Michalek <juraj.michalek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
clap-nested = "*"
json = "*"
md5 = "*"
reqwest = "*"
tokio = { version = "1", features = ["full"] }
wmi = "*"
widestring = "*"
winapi = { version = "*", features = ["setupapi", "handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default", "shellapi"] }
zip = "*"

[[bin]]
name = "curator"
path = "curator.rs"
